--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,30 +28,34 @@
 
 
 
-stages:  
-  - execute-script
+# stages:  
+#   - execute-script
 
-variables:
-  GIT_STRATEGY: clone
+# variables:
+#   GIT_STRATEGY: clone
 
-# Job pour les événements "issue"
+# # Job pour les événements "issue"
 # execute-python-on-issue-update:
 #   stage: execute-script
 #   script:
 #     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
 #   rules:
 #     - if: '$CI_PIPELINE_SOURCE == "issue"'
-execute-python-on-issue-update:
+
+# # Job pour les événements "merge_request"
+# execute-python-on-pr-update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "merge_request"'
+
+
+
+
+test-trigger:
   stage: execute-script
   script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+    - echo "Pipeline déclenché avec succès !"
   rules:
     - if: '$CI_PIPELINE_SOURCE == "trigger"'
-
-# Job pour les événements "merge_request"
-execute-python-on-pr-update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request"'
