--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,6 +51,12 @@
 #     - if: '$CI_PIPELINE_SOURCE == "merge_request"'
 
 
+workflow:
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "issue"'
+    - if: '$CI_PIPELINE_SOURCE == "merge_request"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger" && ($RUN_ISSUE_SCRIPT == "true" || $RUN_PR_SCRIPT == "true")'
+
 stages:  
   - execute-script
 
@@ -64,7 +70,7 @@ execute-python-on-issue-update:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "issue"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger" && $RUN_ISSUE_SCRIPT == "true"'  # Ajout pour les pipelines déclenchés avec une variable personnalisée
+    - if: '$CI_PIPELINE_SOURCE == "trigger" && $RUN_ISSUE_SCRIPT == "true"'
 
 # Job pour les événements "merge_request"
 execute-python-on-pr-update:
@@ -73,4 +79,4 @@ execute-python-on-pr-update:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger" && $RUN_PR_SCRIPT == "true"'  # Ajout pour les pipelines déclenchés avec une variable personnalisée
+    - if: '$CI_PIPELINE_SOURCE == "trigger" && $RUN_PR_SCRIPT == "true"'
