--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,35 +1,6 @@
-stages:  
-  - execute-script
-
-
-variables:
-  GIT_STRATEGY: clone
-
-# Job pour les événements "issue"
-execute-python-on-issue-update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  rules:
-    # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
-
-
-# Job pour les événements "merge_request"
-execute-python-on-pr-update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"' 
- 
-
-
-
 # stages:  
 #   - execute-script
+
 
 # variables:
 #   GIT_STRATEGY: clone
@@ -40,7 +11,10 @@ execute-python-on-pr-update:
 #   script:
 #     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
 #   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "issue"'
+#     # - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
+
 
 # # Job pour les événements "merge_request"
 # execute-python-on-pr-update:
@@ -48,4 +22,30 @@ execute-python-on-pr-update:
 #   script:
 #     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
 #   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "merge_request"'
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"' 
+ 
+
+
+
+stages:  
+  - execute-script
+
+variables:
+  GIT_STRATEGY: clone
+
+# Job pour les événements "issue"
+execute-python-on-issue-update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "issue"'
+
+# Job pour les événements "merge_request"
+execute-python-on-pr-update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request"'
