--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,7 @@ variables:
 debug-variables:
   stage: execute-script
   script:
-    - echo "CI_PIPELINE_SOURCE: $CI_PIPELINE_SOURCE"
+    - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
   rules:
     - when: always
 
