--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,23 @@
+stages:
+  - execute-script
+
+execute_python_on_issue_update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "web"'
+
+
+
+
+
+
+
+
+
+
+
 # stages:  
 #   - execute-script
 
@@ -25,40 +45,42 @@
 #     - if: '$CI_PIPELINE_SOURCE == "web"'
 #     - if: '$CI_PIPELINE_SOURCE == "trigger"' 
  
-stages:  
-  - execute-script
 
-variables:
-  GIT_STRATEGY: clone
 
-# Debug job to print variables
-debug-variables:
-  stage: execute-script
-  script:
-    - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
-  rules:
-    - when: always
+# stages:  
+#   - execute-script
 
-# Job pour les événements "issue" ou "trigger"
-execute-python-on-issue-update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "issue" || $CI_PIPELINE_SOURCE == "trigger"'
+# variables:
+#   GIT_STRATEGY: clone
 
-# Job pour les événements "merge_request" ou "trigger"
-execute-python-on-pr-update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request" || $CI_PIPELINE_SOURCE == "trigger"'
+# # Debug job to print variables
+# debug-variables:
+#   stage: execute-script
+#   script:
+#     - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
+#   rules:
+#     - when: always
 
-# Fallback job to prevent empty pipeline
-fallback-job:
-  stage: execute-script
-  script:
-    - echo "No specific job matched the pipeline source."
-  rules:
-    - when: always
+# # Job pour les événements "issue" ou "trigger"
+# execute-python-on-issue-update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "issue" || $CI_PIPELINE_SOURCE == "trigger"'
+
+# # Job pour les événements "merge_request" ou "trigger"
+# execute-python-on-pr-update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "merge_request" || $CI_PIPELINE_SOURCE == "trigger"'
+
+# # Fallback job to prevent empty pipeline
+# fallback-job:
+#   stage: execute-script
+#   script:
+#     - echo "No specific job matched the pipeline source."
+#   rules:
+#     - when: always
