--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,14 @@ execute_python_on_issue_update:
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_PIPELINE_SOURCE == "pipeline"'
+
+default_job:
+  stage: execute-script
+  script:
+    - echo "No specific job to run, executing default job."
+  rules:
+    - when: always
 
 
 
