--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,24 @@
 stages:
   - execute-script
 
+variables:
+  GIT_STRATEGY: clone
+
+# Job pour les événements "issue"
 execute_python_on_issue_update:
   stage: execute-script
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "pipeline"'
+    - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
 
-default_job:
+# Job pour les événements "merge_request"
+execute_python_on_pr_update:
   stage: execute-script
   script:
-    - echo "No specific job to run, executing default job."
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    - when: always
-
-
-
-
-
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"'
 
 
 
