--- a/.github/workflows/sync-issues.yml
+++ b/.github/workflows/sync-issues.yml
@@ -6,21 +6,45 @@ on:
   repository_dispatch:
     types: [gitlab_trigger]
 
+
+
+
+
 jobs:
-  sync-issues:
+  execute-python-on-issue-update:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Execute sync script
+      - name: Download script_issue.py
         run: |
-          python3  /home/gitlab-runner/scripts-secures/script_issue.py
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+          curl -o ./script_issue.py http://192.168.0.244/scripts/script_issue.py
+
+      - name: Execute Python script for issues
+        run: python3 ./script_issue.py
+        if: github.event_name == 'issues' || github.event_name == 'workflow_dispatch' || github.event_name == 'repository_dispatch'
+
+
+
+# jobs:
+#   sync-issues:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4
+
+#       - name: Set up Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.x'
+
+#       - name: Execute sync script
+#         run: |
+#           python3  /home/gitlab-runner/scripts-secures/script_issue.py
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+
+
+
